# Dolphin3D

./: CMakeLists.txt  LICENSE.txt  README.md  Vector3.h  _setup.txt  _version.txt  build (powershell).ps1  build.bat  build.ps1  compatibility.java  config.ini  functions.h  log.cs  main.cpp  render.cpp  render.h  test.html  versions.json  versions.txt
Tools/compatibility/: check.vbs  run.bat
Tools/compatibility/cache/: versions.data
_docs/: LICENSE.txt  Requirements.md  System requirements.md  _setup.md  _setup.txt  easter egg.md  requirements.md
_docs/scripting/: 0 - Getting Started.md  1 - Creating a window.md  1 - Variables.md  2 - Gradient and positions.md  2 - Screen settings, gradient and positions.md  3 - Camera.md  3 - Canera.md  4 - Objects.md  5 - Audio.md  5 - That's All.md  6 - Customize window.md  7 - That's All.md  8 - Tips.md  9 - That's All.md
_docs/scripting/md/: 0 - Getting Started.md
assets/: test.txt  ufo.txt
examples/Demos/demo_color change/: main.cpp
examples/PowerLight/: main.cpp
examples/Templates/Baseplate/: baseplate.cpp  main.cpp
examples/UFO Demo/: ufo.cpp
include/: Dolphin3D.h  Vector2.h  Vector3.h  Vector4.h  audio.h  camera.h  collision.h  color.h  dolphin.h  functions.h  globals.h  gradients.h  icon.h  keyCodes.h  log.h  mat4.h  mesh.h  objects.h  objects.hpp  render.h  rotate.h  setup.h
include/Vectors/: Vector2.h  Vector3.h
src/: globals.cpp  log.cpp  main.cpp  render.cpp
templates/: README.md  ufo.cpp
templates/Baseplate/: main.cpp
templates/Empty/: main.cpp
templates/Sphere/: main.cpp
(+2 files in other folders)
